# penumbra

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PR_DESCRIPTION.md  README.md  deny.toml  flake.nix  justfile  per-asset-viewing-key.md  rust-toolchain.toml
crates/bench/: Cargo.toml  circuit_benchmarks.csv
crates/bench-support/: Cargo.toml
crates/bench-support/src/: extraction.rs  lib.rs  proof_txs.rs
crates/bench/benches/: output.rs  spend.rs
crates/bench/benches/compliance/: README.md  flows.csv
crates/bench/benches/compliance/client/: README.md  client.csv  crypto.rs  enrichment.rs  flow.rs  sections.csv
crates/bench/benches/compliance/helpers/: vanilla_circuits.rs
crates/bench/benches/compliance/node_abci/: README.md  flow.rs  node_abci.csv  sections.csv
crates/bench/benches/compliance/scanner/: README.md  decryption.rs  flow.rs  scanner.csv  sections.csv  trees.rs
crates/bench/benches/compliance/tps/: DEPLOYMENT_PATHS.md  README.md  config.example.yaml
crates/bench/benches/compliance/validator/: README.md  block.rs  flow.rs  proofs.rs  sections.csv  validator.csv  verification.rs
crates/bench/benches/ibc/: ibc_throughput.rs
crates/bench/benches/state/: nullifier_storage.rs
crates/bench/benches/vanilla/: bls_threshold.rs  snarkpack.rs  snarkpack_prepared_g2.rs
crates/bench/corpus/snarkpack/: .gitignore
crates/bench/src/: lib.rs
crates/bench/src/tps/: aggregate.rs  config.rs  corpus.rs  mod.rs  observer.rs  report.rs  sender.rs
crates/bench/tests/: constraint_counts.rs  hierarchical_keys_poc.rs
crates/core/app-tests/: Cargo.toml
crates/core/app-tests/tests/: app_aggregate_bundle_poc.rs  app_bootstraps_post_genesis_validator_definitions.rs  app_can_define_and_delegate_to_a_validator.rs  app_can_deposit_into_community_pool.rs  app_can_disable_community_pool_spends.rs  app_can_propose_community_pool_spends.rs  app_can_spend_notes_and_detect_outputs.rs  app_can_sweep_a_collection_of_small_notes.rs  app_can_transfer_notes_and_detect_new_notes.rs  app_can_undelegate_from_a_validator.rs  app_rejects_validator_definitions_with_invalid_auth_sigs.rs  app_reproduce_testnet_75_vcb_close.rs  app_tracks_uptime_for_genesis_validator_missing_blocks.rs  app_tracks_uptime_for_genesis_validator_signing_blocks.rs  app_tracks_uptime_for_validators_only_once_active.rs  compliance_action_blocking.rs  compliance_diversifier_fix.rs  compliance_full_flow.rs  compliance_multi_spend_planner.rs  ibc_vs_transfer_benchmark.rs  ics23_transfer.rs  mock_consensus_block_proving.rs  mock_consensus_can_define_a_genesis_validator.rs  spend.rs  swap_and_swap_claim.rs  view_server_can_be_served_on_localhost.rs
crates/core/app-tests/tests/common/: mod.rs  temp_storage_ext.rs  test_node_builder_ext.rs  validator_read_ext.rs
crates/core/component/compliance/: Cargo.toml
crates/core/component/compliance/src/: action_check.rs  audit.rs  audit_records.rs  audit_status.rs  audit_validation.rs  crypto.rs  decode_object.rs  enrichment.rs  event.rs  evidence.rs  genesis.rs  ibc.rs  indexed_tree.rs  issuer_keys.rs  leaf_binding.rs  lib.rs  orbis.rs  orbis_interop.rs  params.rs  r1cs.rs  refs.rs  registry.rs  scanning.rs  state_key.rs  structs.rs  transfer.rs  tree.rs  tx_id.rs  upload_package.rs
crates/core/component/compliance/testdata/: orbis_decaf377_dleq_fixture.json
crates/core/component/compliance/tests/: audit_public_exports.rs
crates/crypto/proof-aggregation/: Cargo.toml  proof-aggregation-analysis.md
crates/crypto/proof-aggregation-fuzz/: .gitignore  Cargo.toml
crates/crypto/proof-aggregation-fuzz/corpus/deserialize_aggregate_proof/: truncated-wrapper
crates/crypto/proof-aggregation-fuzz/corpus/preflight_aggregate_verify/: valid-wrapper  wrong-length-prefix
crates/crypto/proof-aggregation-fuzz/corpus/sidecar_decoding/: wrong-digest
crates/crypto/proof-aggregation-fuzz/fuzz_targets/: aggregate_bundle_shape.rs  common.rs  deserialize_aggregate_proof.rs  preflight_aggregate_verify.rs  proposal_validation.rs  sidecar_decoding.rs  wrapper_inner_range.rs
crates/crypto/proof-aggregation-lean-conformance/: Cargo.toml
crates/crypto/proof-aggregation-lean-conformance/lean/: SnarkpackOracle.lean
crates/crypto/proof-aggregation-lean-conformance/src/: lib.rs
crates/crypto/proof-aggregation-reference/: Cargo.toml
crates/crypto/proof-aggregation-reference/proptest-regressions/: lib.txt
crates/crypto/proof-aggregation-reference/src/: lib.rs
crates/crypto/proof-aggregation-reference/tests/fixtures/: penumbra_byte_trace_baseline.txt
crates/crypto/proof-aggregation-trace-schema/: Cargo.toml
crates/crypto/proof-aggregation-trace-schema/src/: lib.rs
crates/crypto/proof-aggregation/examples/: srs_report.rs
crates/crypto/proof-aggregation/formal/snarkpack/: adaptation-scope.txt  hax-extraction-boundary.md  (+3 more)
crates/crypto/proof-aggregation/src/: aggregate_proof_wrapper.rs  backend.rs  bundle.rs  lib.rs  padding.rs  preflight.rs  srs.rs  statement.rs  transcript.rs  transfer_family_dispatch.rs
crates/test/mock-client/: Cargo.toml
crates/test/mock-client/src/: lib.rs
crates/util/orbis-client/: Cargo.toml
crates/util/orbis-client/src/: auth.rs  client.rs  lib.rs  pre.rs  types.rs
crates/view/: Cargo.toml
crates/view/src/: client.rs  client_compliance.rs  compliance_tree.rs  lib.rs  note_manager.rs  planner.rs  service.rs  storage.rs  sync.rs  worker.rs
crates/view/src/storage/: compliance.rs  schema.sql
poc/crates/compliance-bench/: Cargo.toml
poc/crates/compliance-bench/benches/: README.md
poc/crates/preconsensus/: Cargo.toml
poc/crates/preconsensus/src/: lib.rs  local_mempool.rs
poc/crates/stage-bench/: Cargo.toml
poc/crates/stage-bench/src/: execution.rs  lib.rs  lookahead_builder.rs  lookahead_builder_frontier.rs  mempool.rs  single_builder.rs  validation.rs
poc/tools/android-proof-lab/: Cargo.toml
poc/tools/android-proof-lab/scripts/: run-proof-lab.sh
poc/tools/android-proof-lab/src/: gnark_spend.rs  gnark_transfer.rs  main.rs
tools/gnark/rust-vectors/: Cargo.toml
tools/gnark/rust-vectors/src/: main.rs
(+1048 files in other folders)
