[package]
name = "penumbra-sdk-view"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
description = "The view RPC library for the Penumbra Zone"
repository = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
publish = true

[features]
default = ["std"]
# When this feature is enabled, the view worker will request every single
# SCT root, to pinpoint exactly where any SCT root divergence occurs.
sct-divergence-check = []
std = ["ark-std/std"]

[dependencies]
anyhow = {workspace = true}
ark-std = {workspace = true, default-features = false}
async-stream = {workspace = true}
async-trait = {workspace = true}
bytes = {workspace = true, features = ["serde"]}
camino = {workspace = true}
cnidarium = {workspace = true, features = ["rpc"]}
decaf377 = {workspace = true, features = ["r1cs"], default-features = true}
digest = "0.9"
ed25519-consensus = {workspace = true}
futures = {workspace = true}
genawaiter = "0.99"
hex = {workspace = true}
ibc-types = {workspace = true, default-features = false}
metrics = {workspace = true}
once_cell = {workspace = true}
parking_lot = {workspace = true}
penumbra-sdk-app = {workspace = true, default-features = false}
penumbra-sdk-asset = {workspace = true, default-features = true}
penumbra-sdk-compact-block = {workspace = true, default-features = false}
penumbra-sdk-compliance = {workspace = true, default-features = false}
penumbra-sdk-fee = {workspace = true, default-features = false}
penumbra-sdk-governance = {workspace = true, default-features = false}
penumbra-sdk-ibc = {workspace = true, default-features = false}
penumbra-sdk-keys = {workspace = true, default-features = true}
penumbra-sdk-num = {workspace = true, default-features = true}
penumbra-sdk-proto = {workspace = true, features = ["rpc"], default-features = true}
penumbra-sdk-sct = {workspace = true, default-features = false}
penumbra-sdk-shielded-pool = {workspace = true, default-features = false}
penumbra-sdk-validator = {workspace = true, default-features = false}
penumbra-sdk-tct = {workspace = true, default-features = true}
penumbra-sdk-transaction = {workspace = true, default-features = true}
prost = {workspace = true}
r2d2 = {workspace = true}
r2d2_sqlite = {workspace = true, features = ["bundled"]}
rand = {workspace = true}
rand_core = {workspace = true, features = ["getrandom"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
sha2 = {workspace = true}
tap = {workspace = true}
tendermint = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tokio-stream = {workspace = true, features = ["sync"]}
tonic = {workspace = true, features = ["tls", "tls-webpki-roots"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
pbjson-types = { workspace = true }

[dev-dependencies]
penumbra-sdk-keys = {workspace = true, features = ["demo"]}
