# Dev dependencies are considered circular.
# Previously, this test suite was located in `penumbra-sdk-app`.
# 
[package]
name        = "penumbra-sdk-app-tests"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true}
repository  = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
description = "Tests for the Penumbra app"
publish     = false
# Disable auto-discovery so we can explicitly list tests
autotests   = false

[features]
component = [
  "dep:cnidarium",
  "dep:cnidarium-component",
  "penumbra-sdk-proto/cnidarium",
  "penumbra-sdk-compact-block/component",
  "penumbra-sdk-fee/component",
  "penumbra-sdk-governance/component",
  "penumbra-sdk-ibc/component",
  "penumbra-sdk-ibc/rpc",
  "penumbra-sdk-sct/component",
  "penumbra-sdk-shielded-pool/component",
  "penumbra-sdk-validator/component",
  "dep:tonic",
  "dep:tonic-reflection",
  "dep:tonic-web"
]
default = ["std", "component"]
std     = ["ark-ff/std", "ibc-types/std"]

[dependencies]
anyhow                           = { workspace = true }
ark-ff                           = { workspace = true, default-features = false }
async-trait                      = { workspace = true }
base64                           = { workspace = true }
bech32                           = { workspace = true }
bincode                          = { workspace = true }
bitvec                           = { workspace = true }
blake2b_simd                     = { workspace = true }
cfg-if                           = "1.0"
cnidarium                        = { workspace = true, optional = true, features = ["migration", "rpc"], default-features = true }
cnidarium-component              = { workspace = true, optional = true, default-features = true }
decaf377                         = { workspace = true, default-features = true }
decaf377-rdsa                    = { workspace = true }
futures                          = { workspace = true }
hex                              = { workspace = true }
ibc-proto                        = { workspace = true, default-features = false, features = ["server"] }
ibc-types                        = { workspace = true, default-features = false }
ics23                            = { workspace = true }
im                               = { workspace = true }
jmt                              = { workspace = true }
metrics                          = { workspace = true }
once_cell                        = { workspace = true }
parking_lot                      = { workspace = true }
penumbra-sdk-asset               = { workspace = true, default-features = true }
penumbra-sdk-app                 = { workspace = true, features = ["benchmark-helpers"], default-features = true }
penumbra-sdk-compact-block           = { workspace = true, default-features = false }
penumbra-sdk-fee                     = { workspace = true, default-features = false }
penumbra-sdk-governance              = { workspace = true, default-features = false }
penumbra-sdk-ibc                     = { workspace = true, features = ["benchmark-helpers"], default-features = false }
penumbra-sdk-keys                    = { workspace = true, default-features = true }
penumbra-sdk-num                     = { workspace = true, default-features = true }
penumbra-sdk-compliance              = { workspace = true, default-features = false }
penumbra-sdk-proof-params            = { workspace = true, default-features = false }
penumbra-sdk-proto                   = { workspace = true, default-features = true }
penumbra-sdk-sct                     = { workspace = true, default-features = false }
penumbra-sdk-shielded-pool           = { workspace = true, features = ["benchmark-helpers", "bundled-proving-keys"], default-features = false }
penumbra-sdk-validator                   = { workspace = true, default-features = false }
penumbra-sdk-tct                     = { workspace = true, default-features = true }
penumbra-sdk-test-subscriber         = { workspace = true }
penumbra-sdk-tower-trace             = { workspace = true }
penumbra-sdk-transaction             = { workspace = true, features = ["parallel"], default-features = true }
penumbra-sdk-txhash                  = { workspace = true, default-features = true }
prost                            = { workspace = true }
rand_chacha                      = { workspace = true }
regex                            = { workspace = true }
serde                            = { workspace = true, features = ["derive"] }
serde_json                       = { workspace = true }
serde_unit_struct                = { workspace = true }
serde_with                       = { workspace = true }
sha2                             = { workspace = true }
tempfile                         = { workspace = true }
tendermint                       = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint-proto                 = { workspace = true }
tokio                            = { workspace = true, features = ["full", "tracing"] }
tokio-util                       = { workspace = true }
tonic                            = { workspace = true, optional = true }
tonic-reflection                 = { workspace = true, optional = true }
tonic-web                        = { workspace = true, optional = true }
tower                            = { workspace = true, features = ["full"] }
tower-abci                       = "0.11"
tower-actor                      = "0.1.0"
tower-service                    = { workspace = true }
tracing                          = { workspace = true }
url                              = { workspace = true }

[dev-dependencies]
axum-server                      = { workspace = true }
camino                           = { workspace = true }
decaf377-fmd                     = { workspace = true, default-features = true }
ed25519-consensus                = { workspace = true }
penumbra-sdk-mock-client             = { workspace = true }
penumbra-sdk-mock-consensus          = { workspace = true }
penumbra-sdk-proto                   = { workspace = true, features = ["box-grpc"] }
penumbra-sdk-test-subscriber         = { workspace = true }
penumbra-sdk-mock-tendermint-proxy   = { workspace = true }
penumbra-sdk-view                    = { workspace = true }
penumbra-sdk-wallet                  = { workspace = true }
penumbra-sdk-proof-aggregation       = { workspace = true }
rand                             = { workspace = true }
rand_chacha                      = { workspace = true }
rand_core                        = { workspace = true }
tap                              = { workspace = true }
tempfile                         = { workspace = true }
tendermint-config                = { workspace = true }
tower-http                       = { workspace = true, features = ["cors"] }
tracing-subscriber               = { workspace = true }
url                              = { workspace = true }
poseidon377                      = { workspace = true }
ark-groth16                      = { workspace = true }
ark-serialize                    = { workspace = true }
ark-snark                        = { workspace = true }
sha2                             = { workspace = true }

# Enable the feature flags to get proving keys when running tests.
[dev-dependencies.penumbra-sdk-proof-params]
workspace = true
features = [
    "bundled-proving-keys",
    "download-proving-keys",
]

# Explicitly list tests to run. Tests not listed here are excluded.
# Many tests need updates to use MockClient::witness_auth_build_with_compliance
# for compliance anchor support. See CLAUDE.md for details.

# Tests that don't use shielded input/output plans (no compliance anchor needed):
[[test]]
name = "app_blocktimes_increment"
path = "tests/app_blocktimes_increment.rs"

[[test]]
name = "app_tracks_uptime_for_genesis_validator_missing_blocks"
path = "tests/app_tracks_uptime_for_genesis_validator_missing_blocks.rs"

[[test]]
name = "app_tracks_uptime_for_genesis_validator_signing_blocks"
path = "tests/app_tracks_uptime_for_genesis_validator_signing_blocks.rs"

[[test]]
name = "mock_consensus_can_define_a_genesis_validator"
path = "tests/mock_consensus_can_define_a_genesis_validator.rs"

[[test]]
name = "mock_consensus_can_send_a_sequence_of_empty_blocks"
path = "tests/mock_consensus_can_send_a_sequence_of_empty_blocks.rs"

# Tests without shielded input/output plans (no compliance needed):
[[test]]
name = "app_rejects_validator_definitions_with_invalid_auth_sigs"
path = "tests/app_rejects_validator_definitions_with_invalid_auth_sigs.rs"

[[test]]
name = "app_bootstraps_post_genesis_validator_definitions"
path = "tests/app_bootstraps_post_genesis_validator_definitions.rs"

# IBC proof verification test (uses IbcRelay action, not regulated):
[[test]]
name = "mock_consensus_block_proving"
path = "tests/mock_consensus_block_proving.rs"

# Tests updated to use compliance registration + witness_auth_build_with_compliance:
# IBC transfer test with compliance setup:
[[test]]
name = "ics23_transfer"
path = "tests/ics23_transfer.rs"

[[test]]
name = "ibc_vs_transfer_benchmark"
path = "tests/ibc_vs_transfer_benchmark.rs"

[[test]]
name = "app_can_transfer_notes_and_detect_new_notes"
path = "tests/app_can_transfer_notes_and_detect_new_notes.rs"

[[test]]
name = "compliance_diversifier_fix"
path = "tests/compliance_diversifier_fix.rs"

[[test]]
name = "view_server_can_be_served_on_localhost"
path = "tests/view_server_can_be_served_on_localhost.rs"

[[test]]
name = "app_can_sweep_a_collection_of_small_notes"
path = "tests/app_can_sweep_a_collection_of_small_notes.rs"
